# aiccs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_local.txt  run_services.bat  run_services.sh  test_whisper.py
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py
app/services/: diarization_service.py  ollama_service.py  whisper_service.py
app/tasks/: audio_task.py  celery_app.py
app/utils/: audio_utils.py
config/: default_prompt.txt  dictionary.txt
